# intl-segmenter-polyfill-rs

./: .eslintrc.js  .gitignore  Cargo.toml  LICENSE_MIT  README.md  before-publish.sh  build.sh  icu-datagen.sh  index.html  index.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: build.yml  publish.yml
example/: index.html  index.ts  package.json  vite-plugin-swc.config.ts  vite.config.js
src/: lib.rs  segments.rs  utils.rs
tests/: index.spec.ts
