[package]
name = "intl-segmenter-polyfill-rs"
description = "A polyfill for Intl.Segmenter"
version = "0.1.4"
edition = "2018"
homepage = "https://github.com/toeverything/intl-segmenter-polyfill-rs"
repository = "https://github.com/toeverything/intl-segmenter-polyfill-rs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wee_alloc = { version = "0.4.5", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
icu = "1.2.0"
icu_provider = "1.2.0"
litemap = "0.7.0"
zerovec = "0.9.4"
icu_provider_adapters = "1.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
